--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
+    "bootstrap-icons": "^1.9.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
