--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "autoprefixer": "^10.4.12",
     "bootstrap-icons": "^1.9.1",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
